data/apps/argocd/excalidraw/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidraw-route
  namespace: excalidraw
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "excalidraw.xxx.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: excalidraw-excalidraw
          port: 80
